community/py3-telethon: upgrade to 1.40.0

--- a/community/py3-telethon/APKBUILD
+++ b/community/py3-telethon/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Lindsay Zhou <i@lin.moe>
 maintainer="Lindsay Zhou <i@lin.moe>"
 pkgname=py3-telethon
-pkgver=1.39.0
+pkgver=1.40.0
 pkgrel=0
 pkgdesc="Full-featured Telegram client library"
 url="https://docs.telethon.dev/"
@@ -22,8 +22,8 @@ checkdepends="
 	py3-pytest-asyncio
 	"
 subpackages="$pkgname-pyc"
-source="
-	https://github.com/LonamiWebs/Telethon/archive/v$pkgver/Telethon-v$pkgver.tar.gz
+source="https://github.com/LonamiWebs/Telethon/archive/v$pkgver/Telethon-v$pkgver.tar.gz
+	0001-Add-send_as-and-message_effect_id-for-client-send_fi.patch
 	"
 builddir="$srcdir/Telethon-$pkgver"
 
@@ -45,5 +45,6 @@ package() {
 }
 
 sha512sums="
-9c0ca8584ca012877bd15cdf332cf8218c0c6899d36504454cb6e92ff140620e3605613fd70626f0a2e38340105d6aa1adb8d5b40c7361c586ede793ae7ead3f  Telethon-v1.39.0.tar.gz
+b00bca0876187ff7bbf69c8996e19d20fc5c3d46d087f8406332740a75c4ae33e6fcd05efe8666ce58849b9249720887c071736a6d2afeb1382fe1d0e859a27c  Telethon-v1.40.0.tar.gz
+df8b3cd02162f70a51e06c895dd7475a7cad1a8daa60176e4a532ff531a90d90ba1dc9443646cc3e78471aae5d773a3a29bf0c064671e8bed59a552a5ef3206f  0001-Add-send_as-and-message_effect_id-for-client-send_fi.patch
 "
