community/py3-greenlet: upgrade to 3.2.0

--- a/community/py3-greenlet/APKBUILD
+++ b/community/py3-greenlet/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Elizabeth Jennifer Myers <elizabeth@sporksirc.net>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=py3-greenlet
-pkgver=3.1.1
+pkgver=3.2.0
 pkgrel=0
 pkgdesc="Lightweight in-process concurrent programming"
 url="https://pypi.org/project/greenlet"
@@ -10,7 +10,9 @@ license="MIT"
 makedepends="py3-setuptools python3-dev py3-gpep517 py3-wheel"
 checkdepends="py3-objgraph py3-psutil"
 subpackages="$pkgname-pyc"
-source="https://files.pythonhosted.org/packages/source/g/greenlet/greenlet-$pkgver.tar.gz"
+source="https://files.pythonhosted.org/packages/source/g/greenlet/greenlet-$pkgver.tar.gz
+	riscv64-fix.patch
+	"
 builddir="$srcdir/greenlet-$pkgver"
 
 replaces="py-greenlet" # Backwards compatibility
@@ -35,5 +37,6 @@ package() {
 }
 
 sha512sums="
-915a6e22c20b235de472c61c7bc4cb60a08b79e29127c4fb817c362cee37f589bc362f12ed31bdc7dda91f49976d4e2784c8d13202bf598156a0aacacdb7f6fb  greenlet-3.1.1.tar.gz
+0a13142bbb9b043a8b6047fdb182b1091dfc8c6da517092ab382b6ae42fbc8d5e4b9d8593d353d1c95dbf7337aa1e4cc946c2638e50e49af4813aee94b07d214  greenlet-3.2.0.tar.gz
+27226c4726645da286320226eb36eb95e91e0d4f22335054d32d1512aa89a5be4397515413e024d422c2b824a7f7efb463aacce2fb7a72206da88f3da26d27ae  riscv64-fix.patch
 "
