main/softhsm: update homepage and source URLs

--- a/main/softhsm/APKBUILD
+++ b/main/softhsm/APKBUILD
@@ -2,17 +2,16 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=softhsm
 pkgver=2.6.1
-pkgrel=4
+pkgrel=5
 pkgdesc="cryptographic store accessible through a PKCS #11"
-url="https://www.opendnssec.org/softhsm/"
+url="https://github.com/softhsm/SoftHSMv2"
 arch="all"
 license="BSD-2-Clause"
 depends="sqlite"
 checkdepends="cppunit-dev"
 makedepends="autoconf automake botan-dev libtool p11-kit-dev sqlite-dev"
 subpackages="$pkgname-doc"
-source="https://dist.opendnssec.org/source/softhsm-$pkgver.tar.gz
-	"
+source="https://github.com/softhsm/softhsm-release-archive/raw/refs/heads/main/releases/softhsm-$pkgver.tar.gz"
 options="!check"  # hangs on the builders
 
 prepare() {
