main/py3-pexpect: run tests verbose
so we can identify which test hangs

--- a/main/py3-pexpect/APKBUILD
+++ b/main/py3-pexpect/APKBUILD
@@ -29,7 +29,7 @@ check() {
 
 	python3 -m venv --clear --without-pip --system-site-packages .testenv
 	.testenv/bin/python3 -m installer .dist/*.whl
-	.testenv/bin/python3 -m pytest -k "$_tests_colors and $_tests_py2"
+	.testenv/bin/python3 -m pytest -v -k "$_tests_colors and $_tests_py2"
 }
 
 package() {
