community/py3-build: fix tests with new flit-core
Fixes:

>       assert trimmed == wheel_files
E       AssertionError: assert {'build/__ini...file.py', ...} == {'build/__ini...file.py', ...}
E
E         Extra items in the left set:
E         'dist-info/licenses/LICENSE'
E         Extra items in the right set:
E         'dist-info/LICENSE'
E         Use -v to get more diff

tests/test_self_packaging.py:119: AssertionError

--- a/community/py3-build/APKBUILD
+++ b/community/py3-build/APKBUILD
@@ -18,7 +18,9 @@ checkdepends="
 	py3-setuptools
 	"
 subpackages="$pkgname-pyc"
-source="https://github.com/pypa/build/archive/refs/tags/$pkgver/py3-build-$pkgver.tar.gz"
+source="https://github.com/pypa/build/archive/refs/tags/$pkgver/py3-build-$pkgver.tar.gz
+	flit-core-tests.patch
+	"
 builddir="$srcdir/build-$pkgver"
 
 replaces=py-build # Backwards compatibility
@@ -55,4 +57,5 @@ package() {
 
 sha512sums="
 91e14208680915414a87bd3ba31229510a78d82d5504efc40cf7f9c6a7a698cfa4ff523f85c2dd6a56b5e313fae57134f64f2c328c88cd40efe40236b0b661cc  py3-build-1.2.2.tar.gz
+6bf57b1e1d5d082f553969af5473386e60043640bcb4808a920f1ce203a2647ff90c3b8ad06c8ce15d79785fd3329a78f2c6824d66eed6e735bc78f9757a174d  flit-core-tests.patch
 "
