testing/intel-graphics-compiler: upgrade to 2.10.8

--- a/testing/intel-graphics-compiler/APKBUILD
+++ b/testing/intel-graphics-compiler/APKBUILD
@@ -1,15 +1,15 @@
 # Maintainer: Simon Zeni <simon@bl4ckb0ne.ca>
 pkgname=intel-graphics-compiler
-pkgver=2.7.11
+pkgver=2.10.8
 pkgrel=0
 pkgdesc="Intel® Graphics Compiler for OpenCL™"
 url="https://github.com/intel/intel-graphics-compiler"
 arch="x86_64"
 license="MIT"
-_llvmver=14.0.6
-_vciver=0.21.0
-_oclclangver=ocl-open-140
-_spirvllvmver=14.0.9
+_llvmver=15.0.7
+_vciver=0.22.1
+_oclclangver=15.0.1
+_spirvllvmver=15.0.11
 options="!check net" # no tests, fetches SPIRV-Headers
 makedepends="bash
 	bison
@@ -25,11 +25,11 @@ subpackages="$pkgname-dev $pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/intel/intel-graphics-compiler/archive/refs/tags/v$pkgver.tar.gz
 	fix-includes.patch
 	fix-metadata.patch
-	vc-intrinsics-$_vciver.tar.gz::https://github.com/intel/vc-intrinsics/archive/refs/tags/v$_vciver.tar.gz
 	https://github.com/llvm/llvm-project/archive/refs/tags/llvmorg-$_llvmver.tar.gz
 	lfs64.nopatch
+	vc-intrinsics-$_vciver.tar.gz::https://github.com/intel/vc-intrinsics/archive/refs/tags/v$_vciver.tar.gz
 	spirv-llvm-translator-$_spirvllvmver.tar.gz::https://github.com/KhronosGroup/SPIRV-LLVM-Translator/archive/refs/tags/v$_spirvllvmver.tar.gz
-	https://github.com/intel/opencl-clang/archive/refs/heads/$_oclclangver.tar.gz"
+	opencl-clang-$_oclclangver.tar.gz::https://github.com/intel/opencl-clang/archive/refs/tags/v$_oclclangver.tar.gz"
 
 prepare() {
 	default_prepare
@@ -79,12 +79,12 @@ package() {
 }
 
 sha512sums="
-ae00e584e0f8ee436a7a8f4265fe707e092b8d7217be35d3df5b4130de416309e4b8128d9cd565bb31a32d98e1fbcbb7f6fe4925e70bd729a90baf9f72a472d1  intel-graphics-compiler-2.7.11.tar.gz
+71fe6618e9412fab90ead86af9edd50a01b8df66a321e2b2f95063aaa1ea6db9c3a41c4fc2ccb70f8cd4b1fdb0dc1937c5565792debefd38d240fbcad37f026d  intel-graphics-compiler-2.10.8.tar.gz
 9fb547a904657c453abf5515c779749d4dbf1f026b8550d4eb8300db97dd6fd78bbd0354c2d907fefe69e1038086e524ee3b624346b5ad06a8838be4356f647d  fix-includes.patch
-fdda5d7b4828b3501d67a863b7efac1f5a58a0d99cd69884046268dc8b1c9451647f62be4dbf25f2f41e3658144c21a621e0442b1dcdafbf85497194fc94725c  fix-metadata.patch
-5c10b45f26e16074a51878db1dfb85ec0361823e844e358f1df84b272754e7e1ba9f64089fe40f5949ebe38675c214cc933bb872267c83415c5991aec5b060bc  vc-intrinsics-0.21.0.tar.gz
-d64f97754c24f32deb5f284ebbd486b3a467978b7463d622f50d5237fff91108616137b4394f1d1ce836efa59bf7bec675b6dee257a79b241c15be52d4697460  llvmorg-14.0.6.tar.gz
+ce3ccd44f2d7474b9f1e23f4f279b9e04196ae7d9801b10b20e90380ca9e3cccdceed9cee316c2c012a9535679e4a13c0006778a61bf12d1c73333f07e8c2846  fix-metadata.patch
+99beff9ee6f8c26f16ea53f03ba6209a119099cbe361701b0d5f4df9d5cc5f2f0da7c994c899a4cec876da8428564dc7a8e798226a9ba8b5c18a3ef8b181d39e  llvmorg-15.0.7.tar.gz
 c1802340b68abdef274f78a9845797c663a569f074c5925f1dea89ed7a6a29f20c1359acb88c233e75d17fd0536bbd1071ef7f6b61123800b263a0fd1939298e  lfs64.nopatch
-655f803dc63b0622456811ceaafbde676c6bf0853dc3f31195ef3466861139ea679d7409fee75b9ee88f75c42819627419f3a2cfa85e88bf6056719ce4aa82dd  spirv-llvm-translator-14.0.9.tar.gz
-9003ee9736c3a7459508e2a0eacb946a875437ed890bbcf6082d44d503cc702e9194b71565f4bfc5e5a09f79e6e17ef3dd6098dc6e8d45285b1fb38291abd3c7  ocl-open-140.tar.gz
+d339c5c7bed134691ff1a63dbc0f320cc92724cbb8314660a82436416c868c5ad3c1df16e6d55008ad2605ac15615f03255c1adf358f8d3833df6e8290647d6a  vc-intrinsics-0.22.1.tar.gz
+99c8633f0406788106141999e27380cd65172b255dfcf5b17572eee4f4e8e270656171702de95b8eb69c97ce7bc4bd56b1c4aec6bffe7708f60484b05ba38315  spirv-llvm-translator-15.0.11.tar.gz
+194eec1e2582eb7fba2d2956c1fc80b6107ff68c55052a338bed0d61f214a177f05ff3230b21cc1f5a8d11fc4812ab6bd1aaddab8ae6725275493a83fb6cc2fd  opencl-clang-15.0.1.tar.gz
 "
