community/py3-trustme: upgrade to 1.2.1
https://github.com/python-trio/trustme/releases/tag/v1.2.0

https://github.com/python-trio/trustme/releases/tag/v1.2.1

--- a/community/py3-trustme/APKBUILD
+++ b/community/py3-trustme/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=py3-trustme
-pkgver=1.1.0
-pkgrel=1
+pkgver=1.2.1
+pkgrel=0
 pkgdesc="#1 quality TLS certs while you wait, for the discerning tester"
 url="https://github.com/python-trio/trustme"
 arch="noarch"
@@ -14,24 +14,27 @@ depends="
 	py3-service_identity
 	python3
 	"
-makedepends="py3-setuptools"
+makedepends="py3-setuptools py3-wheel py3-gpep517 py3-hatchling"
 checkdepends="py3-pytest"
 subpackages="$pkgname-pyc"
 source="https://pypi.python.org/packages/source/t/trustme/trustme-$pkgver.tar.gz"
 builddir="$srcdir/trustme-$pkgver"
 
 build() {
-	python3 setup.py build
+	gpep517 build-wheel --wheel-dir .dist --output-fd 3 3>&1 >&2
 }
 
 check() {
-	PYTHONPATH="$PWD/build/lib" pytest
+	python3 -m venv --clear --without-pip --system-site-packages testenv
+	testenv/bin/python3 -m installer .dist/*.whl
+	PYTHONPATH="$PWD/build/lib" \
+	testenv/bin/python3 -m pytest
 }
 
 package() {
-	python3 setup.py install --skip-build --root="$pkgdir"
+	python3 -m installer --destdir="$pkgdir" .dist/*.whl
 }
 
 sha512sums="
-f0ad39ffd9f4074107c90258738412ff8ca8ed1b4138e38edc6edad9a5cb8787a53a47fa78b12eba189774902ee3728961feed54b3b5e944e4737749912627b2  trustme-1.1.0.tar.gz
+3dc5158294d79603378a281e706ea6b376833a40621c211f12c383bc1ef0720b2b6c1441eadab43292cbeee34aaa4618ed8ce4b8dedc4ca6f1faa14e4cb485bc  trustme-1.2.1.tar.gz
 "
