--- a/testing/llvm-next/APKBUILD
+++ b/testing/llvm-next/APKBUILD
@@ -178,6 +178,13 @@ source="$source
 	0802-Binutils-ld-fix-static-linking.patch
 	"
 
+# !tracedeps: do not provide binutils cmds at a higher pkgver
+options="
+	build-next-overlay::!tracedeps
+	build-next-bfd::!tracedeps
+	build-next-gas::!tracedeps
+	"
+
 somask="
 	libatomic.so.1
 	libgcc_s.so.1
@@ -985,8 +992,13 @@ _build_next() {
 
 _build_next_overlay() {
 	pkgdesc="$pkgdesc (toolchain meta-package - default tools overlay)"
-	depends="file make patch"
-	provides="build-base=0"
+	depends="
+		$pkgname=$pkgver-r$pkgrel
+		clang-next=$pkgver-r$pkgrel
+		lld-next=$pkgver-r$pkgrel
+		file make patch
+		"
+	provides="build-base=0 cmd:cc=0 cmd:c++=0"
 	replaces="binutils gcc g++ lld$_prevmajorver"
 
 	local f; for f in addr2line ar c++ c++filt cc c89 c99 cpp \
@@ -1001,6 +1013,7 @@ _build_next_bfd() {
 	pkgdesc="$pkgdesc (toolchain meta-package - complementary binutils $_buver linker)"
 	url="https://sourceware.org/binutils/"
 	license="GPL-2.0-or-later AND LGPL-2.1-or-later AND BSD-3-Clause"
+	depends="zlib zstd-libs"
 	install_if="build-next=$pkgver-r$pkgrel"
 	replaces="binutils"
 
@@ -1012,6 +1025,7 @@ _build_next_gas() {
 	pkgdesc="$pkgdesc (toolchain meta-package - complementary binutils $_buver assembler)"
 	url="https://sourceware.org/binutils/"
 	license="GPL-2.0-or-later AND LGPL-2.1-or-later AND BSD-3-Clause"
+	depends="zlib zstd-libs"
 	install_if="build-next=$pkgver-r$pkgrel"
 	replaces="binutils"
 
