main/kbd: install kbd_mode into /bin
Busybox's symlink is in /bin/kbd_mode, so it should be installed here so
that it properly overwrites busybox's symlink.

This issue was found when testing usr merge downstream in pmOS.

--- a/main/kbd/APKBUILD
+++ b/main/kbd/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=kbd
 pkgver=2.7.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Tools for configuring the console (keyboard, virtual terminals, etc.)"
 url="https://kbd-project.org/"
 arch="all"
@@ -118,6 +118,10 @@ package() {
 	# Replace busybox setfont utility.
 	mkdir -p "$pkgdir"/usr/sbin
 	mv "$pkgdir"/usr/bin/setfont "$pkgdir"/usr/sbin
+
+	# Replace busybox kbd_mode
+	mkdir -p "$pkgdir"/bin
+	mv "$pkgdir"/usr/bin/kbd_mode "$pkgdir"/bin
 
 	# Link open to openvt
 	ln -s openvt "$pkgdir"/usr/bin/open
