main/e2fsprogs: overwrite busybox symlinks for chattr and lsattr
Note: no longer amoving usr/bin in the extra func because this dir is
now empty at this point.

This issue was found when testing usr merge downstream in pmOS.

--- a/main/e2fsprogs/APKBUILD
+++ b/main/e2fsprogs/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=e2fsprogs
 pkgver=1.47.2
-pkgrel=1
+pkgrel=2
 pkgdesc="Standard Ext2/3/4 filesystem utilities"
 url="https://e2fsprogs.sourceforge.net/"
 arch="all"
@@ -71,6 +71,11 @@ package() {
 	local i; for i in e2fsck mke2fs mkfs.* fsck.*; do
 		mv "$pkgdir"/usr/sbin/$i "$pkgdir"/sbin/
 	done
+	# overwrite busybox symlinks
+	mkdir -p "$pkgdir"/bin/
+	for i in chattr lsattr; do
+		mv "$pkgdir"/usr/bin/$i "$pkgdir"/bin/
+	done
 }
 
 dev() {
@@ -106,8 +111,7 @@ extra() {
 	depends="$pkgname=$pkgver-r$pkgrel"
 	pkgdesc="Ext2/3/4 filesystem extra utilities"
 
-	mkdir -p "$subpkgdir"
-	amove usr/sbin usr/bin usr/lib
+	amove bin usr/sbin usr/lib
 }
 
 sha512sums="
