--- a/community/sysstat/APKBUILD
+++ b/community/sysstat/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=sysstat
 pkgver=12.7.6
-pkgrel=0
+pkgrel=1
 pkgdesc="Performance monitoring tools"
 url="https://sysstat.github.io/"
 arch="all"
@@ -33,6 +33,13 @@ build() {
 
 package() {
 	make DESTDIR="$pkgdir" install
+
+	# overwrite busybox symlinks
+	mkdir -p "$pkgdir"/bin/
+	local i; for i in iostat mpstat; do
+		mv "$pkgdir"/usr/bin/$i "$pkgdir"/bin/
+	done
+
 }
 
 sha512sums="
