--- a/main/gzip/APKBUILD
+++ b/main/gzip/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=gzip
 pkgver=1.14
-pkgrel=0
+pkgrel=1
 pkgdesc="Popular data compression program"
 subpackages="$pkgname-doc"
 url="https://www.gnu.org/software/gzip/"
@@ -39,7 +39,10 @@ package() {
 	rmdir -p "$pkgdir"/usr/lib 2>/dev/null || true
 
 	mkdir -p "$pkgdir"/bin
-	mv "$pkgdir"/usr/bin/gzip "$pkgdir"/usr/bin/gunzip "$pkgdir"/bin/
+	local i; for i in gzip gunzip zcat; do
+		mv "$pkgdir"/usr/bin/$i "$pkgdir"/bin/
+	done
+
 	ln -s /bin/gzip "$pkgdir"/usr/bin/gzip
 	ln -s /bin/gunzip "$pkgdir"/usr/bin/gunzip
 
