main/debian-archive-keyring: orphan
I don't use this anymore.

--- a/main/debian-archive-keyring/APKBUILD
+++ b/main/debian-archive-keyring/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Sören Tempel <soeren+alpine@soeren-tempel.net>
-# Maintainer: Sören Tempel <soeren+alpine@soeren-tempel.net>
+# Maintainer:
 pkgname=debian-archive-keyring
 pkgver=2023.4
 pkgrel=0
