community/py3-pynacl: build with gpep517; fixes failing check phase

--- a/community/py3-pynacl/APKBUILD
+++ b/community/py3-pynacl/APKBUILD
@@ -2,13 +2,13 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=py3-pynacl
 pkgver=1.5.0
-pkgrel=5
+pkgrel=6
 pkgdesc="Python3 binding to the Networking and Cryptography (NaCl) library"
 url="https://github.com/pyca/pynacl"
 arch="all"
 license="Apache-2.0"
 depends="py3-cffi"
-makedepends="py3-setuptools python3-dev libffi-dev py3-wheel"
+makedepends="py3-gpep517 py3-setuptools python3-dev libffi-dev py3-wheel"
 checkdepends="py3-pytest py3-hypothesis"
 subpackages="$pkgname-pyc"
 source="https://github.com/pyca/pynacl/archive/$pkgver/pynacl-$pkgver.tar.gz
@@ -21,15 +21,20 @@ replaces="py-pynacl" # Backwards compatibility
 provides="py-pynacl=$pkgver-r$pkgrel" # Backwards compatibility
 
 build() {
-	python3 setup.py build
+	gpep517 build-wheel \
+		--wheel-dir .dist \
+		--output-fd 3 3>&1 >&2
 }
 
 check() {
-	python3 setup.py test
+	python3 -m venv --clear --without-pip --system-site-packages .testenv
+	.testenv/bin/python3 -m installer .dist/*.whl
+	.testenv/bin/python3 -m pytest
 }
 
 package() {
-	python3 setup.py install --skip-build --root="$pkgdir"
+	python3 -m installer -d "$pkgdir" \
+		.dist/*.whl
 }
 
 sha512sums="
