--- a/community/gedit/APKBUILD
+++ b/community/gedit/APKBUILD
@@ -2,10 +2,10 @@
 # Maintainer: mio <miyopan@e.email>
 maintainer="mio <miyopan@e.email>"
 pkgname=gedit
-pkgver=48.1
-pkgrel=2
+pkgver=48.2
+pkgrel=0
 pkgdesc="An easy-to-use and general-purpose text editor"
-url="https://gedit-technology.github.io/apps/gedit/"
+url="https://gedit-text-editor.org"
 arch="all"
 license="GPL-2.0-only"
 depends_dev="gedit=$pkgver-r$pkgrel"
@@ -28,8 +28,23 @@ makedepends="
 	"
 checkdepends="appstream-glib desktop-file-utils"
 depends="gsettings-desktop-schemas"
-subpackages="$pkgname-dev $pkgname-doc $pkgname-lang $pkgname-pyc"
-source="https://download.gnome.org/sources/gedit/${pkgver%.*}/gedit-$pkgver.tar.xz"
+subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
+
+# Submodules are no longer included with a release tarball, see:
+# https://gitlab.gnome.org/World/gedit/gedit/-/issues/611
+# No commit hash specified in gedit repo .gitmodules, use the latest git head
+# of libgd at the time of gedit tagged release. Unrelated to main/libgd.
+_libgd_rev="3cccf99234288a6121b3945a25cd4ec3b7445c74"
+source="https://gitlab.gnome.org/World/gedit/gedit/-/archive/$pkgver/gedit-$pkgver.tar.gz
+	https://gitlab.gnome.org/GNOME/libgd/-/archive/$_libgd_rev/libgd-$_libgd_rev.tar.gz
+	"
+
+prepare() {
+	default_prepare
+
+	rm -r subprojects/libgd
+	mv "$srcdir"/libgd-$_libgd_rev subprojects/libgd
+}
 
 build() {
 	abuild-meson . output
@@ -45,5 +60,6 @@ package() {
 }
 
 sha512sums="
-63517f12b986e4ac901432f5875d6de78c8161cf4f55450466e67be60708eb0e0d67d4b434a45820a18094c803c8e0d413e85bf6a971e159f3fc8a7e5c128f2c  gedit-48.1.tar.xz
+406bd5ccc45178128c2251ab555f955f8dcc0d040fd2e3d20fc75b7164c4b750d9cae0285e8bc76637a3e500c07989132e6da0b7541c944eb379193a6cb84942  gedit-48.2.tar.gz
+8ee7ddb533650cad953a9d13b5fe8db204b3b3cab7bb932ab5c31c21aa6a0094864a307e0e925f64044d18f725376cb5cb8ddb2d8377f76455be700d9ec94c26  libgd-3cccf99234288a6121b3945a25cd4ec3b7445c74.tar.gz
 "
