community/unit: skip test_tls_certificate_change

--- a/community/unit/APKBUILD
+++ b/community/unit/APKBUILD
@@ -88,6 +88,7 @@ check() {
 	case "$CARCH" in
 		armhf | armv7) _allow_fail=yes ;; # segfault
 	esac
+	# test_tls_certificate_change - https://github.com/nginx/unit/issues/1600
 	GEM_PATH=$_ruby pytest test --fds-threshold=$_fds -k "
 		not java and not go and not node \
 		and not njs \
@@ -99,6 +100,7 @@ check() {
 		and not test_python_user_group \
 		and not test_ruby_isolation \
 		and not test_settings_send_timeout \
+		and not test_tls_certificate_change
 	" || [ "$_allow_fail" = yes ]
 }
 
