community/sqlint: disable

--- a/community/sqlint/APKBUILD
+++ b/community/sqlint/APKBUILD
@@ -9,7 +9,8 @@ pkgrel=0
 pkgdesc="Simple SQL linter supporting ANSI and PostgreSQL syntaxes"
 url="https://github.com/purcell/sqlint"
 # x86, armhf, armv7, s390x and riscv64 blocked by ruby-pg_query
-arch="noarch !x86 !armhf !armv7 !s390x !riscv64"
+#arch="noarch !x86 !armhf !armv7 !s390x !riscv64"
+arch="" # blocked by (removed) ruby-pg_query
 license="MIT"
 depends="ruby ruby-pg_query"
 checkdepends="ruby-rspec"
