--- a/community/xapian-bindings/APKBUILD
+++ b/community/xapian-bindings/APKBUILD
@@ -6,6 +6,7 @@ pkgrel=0
 pkgdesc="Binding libraries for xapian"
 url="http://www.xapian.org"
 arch="all"
+arch="" # blocked by py3-sphinx-autobuild -> uvicorn
 license="GPL-2.0-or-later"
 # Disabled check for now since ruby smoketest fails
 options="!check"
