--- a/community/akonadiconsole/APKBUILD
+++ b/community/akonadiconsole/APKBUILD
@@ -8,7 +8,8 @@ pkgver=24.12.3
 pkgrel=0
 # s390x, ppc64le, armhf and riscv64 blocked by akonadi
 # ppc64le, armv7 and loongarch64 blocked by calendarsupport
-arch="all !armhf !s390x !ppc64le !riscv64 !armv7 !loongarch64"
+#arch="all !armhf !s390x !ppc64le !riscv64 !armv7 !loongarch64"
+arch="" # blocked by xapian-bindings -> py3-sphinx-autobuild -> uvicorn
 url="https://kontact.kde.org/"
 pkgdesc="Application for debugging Akonadi Resources"
 license="GPL-2.0-or-later AND GFDL-1.2-only"
