--- a/community/py3-sphinx-autobuild/APKBUILD
+++ b/community/py3-sphinx-autobuild/APKBUILD
@@ -5,7 +5,8 @@ pkgver=2024.10.03
 pkgrel=1
 pkgdesc="Watch a Sphinx directory and rebuild the documentation when a change is detected"
 url="https://github.com/executablebooks/sphinx-autobuild"
-arch="noarch"
+#arch="noarch"
+arch="" # blocked by uvicorn
 license="MIT"
 replaces="py-sphinx-autobuild" #for backwards compatibility
 provides="py-sphinx-autobuild=$pkgver-r$pkgrel" #for backwards compatibility
