--- a/community/mediaelch/APKBUILD
+++ b/community/mediaelch/APKBUILD
@@ -5,7 +5,8 @@ pkgver=2.12.0
 pkgrel=0
 pkgdesc="Media Manager for Kodi"
 url="https://github.com/Komet/MediaElch"
-arch="all"
+# armhf: blocked by qt6-qtdeclarative
+arch="all !armhf"
 license="LGPL-3.0-only"
 depends="qt6-qtbase-sqlite qt6-qtsvg"
 makedepends="
