community/lith: disable on armhf

--- a/community/lith/APKBUILD
+++ b/community/lith/APKBUILD
@@ -6,7 +6,8 @@ pkgrel=0
 pkgdesc="fast and user-friendly Weechat relay client"
 url="https://github.com/LithApp/Lith"
 # riscv64: Variable QMAKE_CXX.COMPILER_MACROS is not defined.
-arch="all !riscv64"
+# armhf: blocked by qt6-qtdeclarative
+arch="all !riscv64 !armhf"
 license="GPL-2.0"
 makedepends="
 	qt6-qtbase-dev
@@ -16,7 +17,7 @@ makedepends="
 "
 depends="qt6-qtmultimedia"
 source="$pkgname-$pkgver.tar.gz::https://github.com/LithApp/Lith/archive/refs/tags/$pkgver.tar.gz"
-options="!check"  # no tests
+options="!check" # no tests
 builddir="$srcdir/Lith-$pkgver"
 
 build() {
