community/moonlight-qt: disable on armhf

--- a/community/moonlight-qt/APKBUILD
+++ b/community/moonlight-qt/APKBUILD
@@ -5,7 +5,8 @@ pkgrel=2
 pkgdesc="Open Source PC client for NVIDIA GameStream, as used by the NVIDIA Shield"
 url="https://moonlight-stream.org/"
 # riscv64 blocked by libdav1d
-arch="all !riscv64"
+# armhf: blocked by qt6-qtdeclarative
+arch="all !riscv64 !armhf"
 license="GPL-3.0-or-later"
 depends="ffmpeg"
 makedepends="openssl-dev sdl2-dev sdl2_ttf-dev ffmpeg-dev qt6-qtsvg-dev qt6-qtdeclarative-dev libva-dev libvdpau-dev opus-dev pulseaudio-dev alsa-lib-dev"
