--- a/community/melonds/APKBUILD
+++ b/community/melonds/APKBUILD
@@ -4,7 +4,8 @@ pkgver=0.9.5
 pkgrel=3
 pkgdesc="Nintendo DS Emulator"
 url="https://melonds.kuribo64.net/"
-arch="all"
+# armhf: blocked by qt6-qtdeclarative
+arch="all !armhf"
 license="GPL-3.0-or-later"
 makedepends="
 	cmake
