community/accounts-qml-module: disable on armhf

--- a/community/accounts-qml-module/APKBUILD
+++ b/community/accounts-qml-module/APKBUILD
@@ -4,7 +4,8 @@ pkgname=accounts-qml-module
 pkgver=0.7_git20231028
 pkgrel=0
 _commit="05e79ebbbf3784a87f72b7be571070125c10dfe3"
-arch="all"
+# armhf: blocked by qt6-qtdeclarative
+arch="all !armhf"
 url="https://gitlab.com/accounts-sso/accounts-qml-module"
 pkgdesc="QML bindings for libaccounts-qt + libsignon-qt"
 license="LGPL-2.1-only"
