community/phonon: disable on armhf

--- a/community/phonon/APKBUILD
+++ b/community/phonon/APKBUILD
@@ -7,7 +7,8 @@ pkgver=4.12.0
 pkgrel=0
 pkgdesc="KDE multimedia backend"
 url="https://userbase.kde.org/Phonon"
-arch="all"
+# armhf: blocked by qt6-qtdeclarative
+arch="all !armhf"
 license="LGPL-2.1-or-later"
 depends_dev="
 	glib-dev
