community/py3-pyqt-feedback-flow: disable on armhf

--- a/community/py3-pyqt-feedback-flow/APKBUILD
+++ b/community/py3-pyqt-feedback-flow/APKBUILD
@@ -6,7 +6,8 @@ pkgver=0.3.4
 pkgrel=0
 pkgdesc="Show feedback in toast-like notifications"
 url="https://github.com/firefly-cpp/pyqt-feedback-flow"
-arch="noarch"
+# armhf: blocked by py3-qt6 -> qt6-qtdeclarative
+arch="noarch !armhf"
 license="MIT"
 depends="python3 py3-emoji py3-qt6"
 makedepends="py3-gpep517 py3-poetry-core"
