community/py3-qt6: disable on armhf

--- a/community/py3-qt6/APKBUILD
+++ b/community/py3-qt6/APKBUILD
@@ -5,7 +5,8 @@ pkgver=6.7.1
 pkgrel=0
 pkgdesc="Python 3 bindings for the Qt toolkit"
 url="https://www.riverbankcomputing.com/software/pyqt/"
-arch="all"
+# armhf: blocked by qt6-qtdeclarative
+arch="all !armhf"
 license="GPL-3.0-only"
 depends="
 	py3-pyqt6-sip
