--- a/community/py3-pyqt6-webengine/APKBUILD
+++ b/community/py3-pyqt6-webengine/APKBUILD
@@ -4,8 +4,9 @@ pkgver=6.7.0
 pkgrel=0
 pkgdesc="Python bindings for the Qt6 WebEngine framework"
 url="https://pypi.org/project/PyQt6-WebEngine/"
+# armhf: blocked by qt6-qtdeclarative
 # others blocked by qt6-qtwebengine
-arch="all !riscv64 !s390x !ppc64le"
+arch="all !riscv64 !s390x !ppc64le !armhf"
 license="GPL-3.0-only"
 depends="py3-qt6"
 makedepends="
