--- a/community/niaaml-gui/APKBUILD
+++ b/community/niaaml-gui/APKBUILD
@@ -6,7 +6,8 @@ pkgver=0.3.2
 pkgrel=0
 pkgdesc="GUI for NiaAML Python package"
 url="https://github.com/firefly-cpp/NiaAML-GUI"
-arch="noarch"
+# armhf: blocked by py3-qt6 -> qt6-qtdeclarative
+arch="noarch !armhf"
 license="MIT"
 depends="python3 py3-niapy py3-niaaml py3-qtawesome py3-qt6"
 checkdepends="py3-pytest-xdist"
