community/syncplay: disable on armhf

--- a/community/syncplay/APKBUILD
+++ b/community/syncplay/APKBUILD
@@ -7,7 +7,7 @@ pkgdesc="Synchronize watching movies on mplayer2, vlc, mpv, and mpc-hc across ma
 url="https://syncplay.pl/"
 # riscv64 blocked by py3-pyside6
 # armhf blocked by qt6-qtdeclarative -> py3-pyside6
-arch="noarch !riscv64"
+arch="noarch !riscv64 !armhf"
 license="Apache-2.0"
 depends="
 	python3
