community/gedit-plugins: upgrade to 48.2
https://gitlab.gnome.org/World/gedit/gedit-plugins/-/blob/master/NEWS

--- a/community/gedit-plugins/APKBUILD
+++ b/community/gedit-plugins/APKBUILD
@@ -1,10 +1,11 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: mio <miyopan@e.email>
+maintainer="mio <miyopan@e.email>"
 pkgname=gedit-plugins
-pkgver=48.1
-pkgrel=1
+pkgver=48.2
+pkgrel=0
 pkgdesc="Collection of plugins for the gedit text editor"
-url="https://gitlab.gnome.org/GNOME/gedit/blob/master/plugins/list-of-gedit-plugins.md"
+url="https://gitlab.gnome.org/World/gedit/gedit/blob/master/plugins/list-of-gedit-plugins.md"
 arch="all"
 license="GPL-2.0-only"
 depends="
@@ -29,7 +30,7 @@ makedepends="
 	meson
 	"
 checkdepends="appstream-glib"
-subpackages="$pkgname-lang $pkgname-doc $pkgname-pyc"
+subpackages="$pkgname-lang $pkgname-doc"
 source="https://gitlab.gnome.org/GNOME/gedit-plugins/-/archive/$pkgver/gedit-plugins-$pkgver.tar.gz"
 
 build() {
@@ -55,5 +56,5 @@ pyc() {
 }
 
 sha512sums="
-b303763fd6e078965ebb503e83d6faa76d164d6ca765ef3d8e813c152fc7f91432197e9234f11b2c7bbee3cbaf2709cf049ad6178e18301b31a844c091d4af37  gedit-plugins-48.1.tar.gz
+bbe1ed7c9a727307be639916d238a1c7e5c8203c2e35a6376e97b6f00bf21e02a30cb1bbd71a9202d26d04a25cbea337a4b3a8031b05fec8fafdfc7917608a4f  gedit-plugins-48.2.tar.gz
 "
