community/modemmanager: makedepend on dbus-dev
previously it was pulled in by polkit-dev, but that was removed in
77ce154b13a366a8f4ee9be915b72caf0e06a245

--- a/community/modemmanager/APKBUILD
+++ b/community/modemmanager/APKBUILD
@@ -12,6 +12,7 @@ depends_dev="libmm-glib=$pkgver-r$pkgrel"
 makedepends="
 	$depends_dev
 	bash-completion-dev
+	dbus-dev
 	elogind-dev
 	gobject-introspection-dev
 	gtk-doc
