main/util-linux: overwrite busybox symlinks for linux32 and linux64
The changes here were inspired by what we do in coreutils/APKBUILD for
handling binaries and symlinks that need to overwrite busybox stuff.

This issue was found when testing usr merge downstream in pmOS.

--- a/main/util-linux/APKBUILD
+++ b/main/util-linux/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=util-linux
 pkgver=2.41
-pkgrel=4
+pkgrel=5
 pkgdesc="Random collection of Linux utilities"
 url="https://git.kernel.org/cgit/utils/util-linux/util-linux.git"
 arch="all"
@@ -167,11 +167,21 @@ check() {
 package() {
 	make DESTDIR="$pkgdir" install
 
-	# Move to /bin to overwrite busybox's version.
-	mv "$pkgdir"/usr/bin/getopt \
-		"$pkgdir"/usr/bin/rev \
-		"$pkgdir"/usr/bin/ionice \
-		"$pkgdir"/bin
+	# Move some files to /bin to replace busybox symlinks
+	for i in "$pkgdir"/usr/bin/*; do
+		case "${i##*/}" in
+			getopt|rev)
+				mv "$i" "$pkgdir"/bin/
+				;;
+			linux32|linux64)
+				if [ -L "$i" ]; then
+					rm "$i"
+					ln -s /usr/bin/setarch "$pkgdir/bin/${i##*/}"
+				fi
+				;;
+			*) ;;
+		esac
+	done
 
 	# use pkg-config
 	install -D -m755 "$srcdir"/rfkill.initd "$pkgdir"/etc/init.d/rfkill
