--- a/community/musescore/APKBUILD
+++ b/community/musescore/APKBUILD
@@ -1,9 +1,9 @@
 # Contributor: Justin Berthault <justin.berthault@zaclys.net>
 # Contributor: Antoni Aloy <aaloytorrens@gmail.com>
-# Maintainer:
+maintainer="Callum Andrew <contact@candrew.net>"
 pkgname=musescore
-pkgver=4.1.0
-pkgrel=2
+pkgver=4.1.1
+pkgrel=0
 pkgdesc="Create, play and print beautiful sheet music"
 url="https://musescore.org/"
 # armhf blocked by qt5-qtdeclarative
@@ -85,7 +85,7 @@ lang() {
 }
 
 sha512sums="
-0dceb70d242afdd06ca47a6f9424e3f632fd4a9180e85a2a55884e7330896096cf07a8c76f554a80dd35aaa08b013fcda9b2098c98c9a3c2a8db431793bc9220  musescore-4.1.0.tar.gz
+49f5c7706fc7c26aeb80df7ddfee9faaadb318831fa8c9fcd74f2d8d77c2749fcdb51b204635f8088d5895a2f11e22eadde019f8528c4c34f61f3ab5302a7132  musescore-4.1.1.tar.gz
 7be484541a5ada15b2cf47f9107d831964fe9b7ee40b9bb294b74ba1d33366ba8931be3eebfe1829dc170854d05728782090e0a7347b5b21351840df7651a0b4  no-kdock.patch
 e1093ccf430d159ee4b2ef6a90615d635cba5c8977a59f7fc7b9bf72d8c7269d160fc328aa80b7c9f59c47bc43e925f016018d99b3c299d651d2076d782d5d12  no-update-check.patch
 fe48cd833ffa3d9f870a07d7f2c9b80f5b3c937db4344915f381b40335f4e950f3d0ebf21866794fa9f23c658e0675bfa2c09a067c512055a6d06a653717e9eb  system-libs.patch
