community/unit: escape newline character
this should fix "ERROR: Wrong expression passed to '-k'"

--- a/community/unit/APKBUILD
+++ b/community/unit/APKBUILD
@@ -100,7 +100,7 @@ check() {
 		and not test_python_user_group \
 		and not test_ruby_isolation \
 		and not test_settings_send_timeout \
-		and not test_tls_certificate_change
+		and not test_tls_certificate_change \
 	" || [ "$_allow_fail" = yes ]
 }
 
