testing/emacs-elfeed: upgrade to 3.4.2

--- a/testing/emacs-elfeed/APKBUILD
+++ b/testing/emacs-elfeed/APKBUILD
@@ -1,8 +1,7 @@
 # Maintainer: Celeste <cielesti@protonmail.com>
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=emacs-elfeed
-pkgver=3.4.1_git20240326
-_gitrev=5c05a1eab37bc113ecb158a4d57fe05352fa2c6a
+pkgver=3.4.2
 pkgrel=0
 _pkgreal=elfeed
 pkgdesc="Emacs Atom/RSS feed reader"
@@ -12,8 +11,8 @@ license="Unlicense"
 depends="cmd:emacs"
 makedepends="emacs-nox"
 checkdepends="cmd:curl"
-source="https://github.com/skeeto/elfeed/archive/$_gitrev/emacs-elfeed-$_gitrev.tar.gz"
-builddir="$srcdir/$_pkgreal-$_gitrev"
+source="https://github.com/skeeto/elfeed/archive/$pkgver/emacs-elfeed-$pkgver.tar.gz"
+builddir="$srcdir/$_pkgreal-$pkgver"
 
 build() {
 	emacs -batch -q -no-site-file -L . \
@@ -37,5 +36,5 @@ package() {
 }
 
 sha512sums="
-681a137cf9e39bbc057f40cde1e6292c94b92d4eee26d78d0c961e7e01c4dd1fd67e659958d5d01b89a3df70e6ff1d7c0b2089eef91c36dee485607deb1958be  emacs-elfeed-5c05a1eab37bc113ecb158a4d57fe05352fa2c6a.tar.gz
+b13faa12feaab382d1245e54029b503eb348ded0883208b86bd4a23d47ca5addadf97956e3e816c627f37de1421892e04cc7cfbc4417c853fb093c14107d1b1d  emacs-elfeed-3.4.2.tar.gz
 "
