community/emacs-jabber: upgrade to 0.9.0

--- a/community/emacs-jabber/APKBUILD
+++ b/community/emacs-jabber/APKBUILD
@@ -1,8 +1,7 @@
 # Maintainer: Celeste <cielesti@protonmail.com>
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=emacs-jabber
-pkgver=0_git20240624
-_gitrev=e766d84b81d5df6abc30fcbbb94f7c8640ea54e2
+pkgver=0.9.0
 pkgrel=0
 _pkgreal=jabber
 pkgdesc="Jabber/XMPP client for Emacs"
@@ -15,13 +14,8 @@ depends="
 	emacs-srv
 	"
 makedepends="emacs-nox"
-source="$pkgname-$_gitrev.tar.gz::https://codeberg.org/emacs-jabber/emacs-jabber/archive/$_gitrev.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://codeberg.org/emacs-jabber/emacs-jabber/archive/v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname/lisp"
-
-prepare() {
-	default_prepare
-	cp -v ../jabber-ourversion.el .
-}
 
 build() {
 	emacs -batch -q -no-site-file -L . \
@@ -55,5 +49,5 @@ package() {
 }
 
 sha512sums="
-c3d4532d80762fec37d70f95970f85efed9bfcfa875d367874c83c9086d90886355db300da893e264d1e6081a7769d9a3bfbc462a8113e8aa86b1fdb8fda1ded  emacs-jabber-e766d84b81d5df6abc30fcbbb94f7c8640ea54e2.tar.gz
+421313680c23af6139505169845ee62a64ca0d779a25c4fddf4327a62e6c51d40ef2e996ac417573fc51bf7b87856d4ec9b7d8019d4aa4263a68a95029266c25  emacs-jabber-0.9.0.tar.gz
 "
