--- a/testing/emacs-embark/APKBUILD
+++ b/testing/emacs-embark/APKBUILD
@@ -1,8 +1,7 @@
 # Maintainer: Celeste <cielesti@protonmail.com>
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=emacs-embark
-pkgver=1.0_git20240327
-_gitrev=d3c9d1b4c890cf365846cc2b418f37341999e79f
+pkgver=1.1
 pkgrel=0
 _pkgreal=embark
 pkgdesc="Conveniently act on minibuffer completions"
@@ -22,8 +21,10 @@ subpackages="
 	emacs-avy-embark-collect
 	emacs-embark-consult
 	"
-source="https://github.com/oantolin/embark/archive/$_gitrev/emacs-embark-$_gitrev.tar.gz"
-builddir="$srcdir/$_pkgreal-$_gitrev"
+source="https://github.com/oantolin/embark/archive/$pkgver/emacs-embark-$pkgver.tar.gz
+	docstring.patch
+	"
+builddir="$srcdir/$_pkgreal-$pkgver"
 options="!check" # no tests provided
 
 build() {
@@ -59,5 +60,6 @@ consult() {
 }
 
 sha512sums="
-bfa06e7b7ab95bc52b27e727b397373423c832bd1ff602b0e9d7a9ac85d8a38c6007604c5d3a68ea5e7f4611471e563a91f3780ff514634654a4229feac1c657  emacs-embark-d3c9d1b4c890cf365846cc2b418f37341999e79f.tar.gz
+29c87eaf3275428cfbd442de3a09d7a126094bc90bb1b1c34f476caf11cd3da21ce9368ef7d1855732250a85b269b01effcd514da10e1e491ecb3bdc61efd750  emacs-embark-1.1.tar.gz
+10056f68bd6972d54fc046ff12776dc3f7473af86fd2722ffa85f0fccb80fc7cab139afdea969bb92660f0eab9829d5de80da0367960ec60f752569a83d898ff  docstring.patch
 "
