community/zotero: avoid runtime dependency on bash
zotero uses bash in places where it can also use sh because the
usage is POSIX shell compatible.

--- a/community/zotero/APKBUILD
+++ b/community/zotero/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Antoine Martin (ayakael) <dev@ayakael.net>
 pkgname=zotero
 pkgver=7.0.15
-pkgrel=0
+pkgrel=1
 _fxver=115.16.0
 _gittag=$pkgver
 pkgdesc="A free, easy-to-use tool to help you collect, organize, cite, and share your research sources."
@@ -102,6 +102,7 @@ source="https://ftp.mozilla.org/pub/firefox/releases/${_fxver}esr/source/firefox
 	zotero_test-fix-chars.patch
 	zotero_test-push-timeout-to-30sec.patch
 	zotero_drop-jazzer.patch
+	avoid-bash-runtime-dependency.patch
 	"
 
 builddir="$srcdir"/firefox-$_fxver
@@ -419,4 +420,5 @@ e1a0a4ff5cc1b53f13776ca11927d671426b0691e78e74a4adf2166d57bb2ae8ac409cc11a37ce5e
 f0e4f09496531222e8400959f9ef12852bca269eb3bf4c3b87ccaf92f28a12b9374461a1c79ad294a4393dbe30800aa1c85497033d0bc304fa8c198dfab3efd2  zotero_test-fix-chars.patch
 9dc390d8bae42e645cae45fe5551751d8f38d5c1b8b2cc0eec1c2191f4bde293ffb2c67cfc4de765f2d48b1da4d5fcd4f1c03711e5da3180cd1b63710ccf5599  zotero_test-push-timeout-to-30sec.patch
 7fb791a386d30594a11ae3856295d5081000de7525036eb0b5836505bd4f0b13a4fe706400ad7efe00b75c2112cf3d59ea3542b6179ccd80f7ee1889349f441d  zotero_drop-jazzer.patch
+c5ac1226c029295cb70c43e21894da1347cf98c156bd6acdcf77edabe803d7969c8e774e78d67f9b2e730943c09767b6f58e3a976de8cff4aa635e8aae5099a1  avoid-bash-runtime-dependency.patch
 "
