community/libmicrohttpd: upgrade to 1.0.1

--- a/community/libmicrohttpd/APKBUILD
+++ b/community/libmicrohttpd/APKBUILD
@@ -4,7 +4,7 @@
 # Contributor: Carlo Landmeter <clandmeter@alpinelinux.org>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libmicrohttpd
-pkgver=0.9.77
+pkgver=1.0.1
 pkgrel=0
 pkgdesc="small C library that is supposed to make it easy to run an HTTP server as part of another application"
 url="https://www.gnu.org/software/libmicrohttpd/"
@@ -14,7 +14,7 @@ makedepends="gnutls-dev"
 checkdepends="curl-dev"
 subpackages="$pkgname-static $pkgname-dev $pkgname-doc"
 source="https://ftp.gnu.org/gnu/libmicrohttpd/libmicrohttpd-$pkgver.tar.gz
-	broken-test.patch
+	disable-test-tricky-url.patch
 	"
 
 build() {
@@ -25,11 +25,15 @@ build() {
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--infodir=/usr/share/info \
+		--disable-examples \
 		--disable-thread-names \
-		--enable-largefile \
+		--disable-tools \
 		--enable-curl \
 		--enable-https \
-		--enable-messages
+		--enable-largefile \
+		--enable-md5=tlslib \
+		--enable-messages \
+		--enable-sha256=tlslib
 	make
 }
 
@@ -42,6 +46,6 @@ package() {
 }
 
 sha512sums="
-001025c023dd94c4a0cf017ed575e65a577b5ce595e7e450346bfb75def77eaa8a4cfbeffb9f4b912e34165c2cfca147c02c895e067a4f6c5a321a12035758a5  libmicrohttpd-0.9.77.tar.gz
-5e5d4331ed9123c1be1dcf77697836ff246c5b297f1bbc7ad051f6a5b0dc68a8d9de17c08fa1363e4783730331dce7286777f714c732046738e4a7520dc038da  broken-test.patch
+c99b8b93cae5feee8debcc5667ee3ff043412a84b30696fe852e6c138f3c890bb43c8fcd7199f1d2f809d522fef159e83b607c743d6cf3401a57050fbdf9b5c1  libmicrohttpd-1.0.1.tar.gz
+c237747aa72e0360410ce42d4048492a9121d7e62ff12406778eefa91b05861f5caf2c179a6d9d37a709ff0ae6d4213a81005968917c40cd0c5da9a225dcdcfa  disable-test-tricky-url.patch
 "
