community/qemu: upgrade to 10.0.0
add module/subpackage hw-uefi-vars

accel-tcg modules are not built by defaults for 32-bit machines so
removed from amove for system-i386 and system-x86_64

64 bit subsystems removed from 32 bit architectures.
https://qemu-project.gitlab.io/qemu/about/deprecated.html#bit-host-operating-systems-since-10-0

--- a/community/qemu/APKBUILD
+++ b/community/qemu/APKBUILD
@@ -3,8 +3,8 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=qemu
-pkgver=9.2.3
-pkgrel=1
+pkgver=10.0.0
+pkgrel=0
 pkgdesc="QEMU is a generic machine emulator and virtualizer"
 url="https://qemu.org/"
 arch="all"
@@ -85,69 +85,76 @@ subpackages="
 	"
 
 _subsystems="
-	aarch64
-	aarch64_be
-	alpha
 	arm
 	armeb
 	hexagon
-	hppa
 	i386
-	loongarch64
 	m68k
 	microblaze
 	microblazeel
 	mips
-	mips64
-	mips64el
 	mipsel
-	mipsn32
-	mipsn32el
 	or1k
 	ppc
-	ppc64
-	ppc64le
 	riscv32
-	riscv64
-	s390x
 	sh4
 	sh4eb
 	sparc
-	sparc32plus
-	sparc64
-	system-aarch64
-	system-alpha
 	system-arm
 	system-avr
-	system-hppa
 	system-i386
-	system-loongarch64
 	system-m68k
-	system-microblaze
-	system-microblazeel
 	system-mips
-	system-mips64
-	system-mips64el
 	system-mipsel
 	system-or1k
 	system-ppc
-	system-ppc64
 	system-riscv32
-	system-riscv64
 	system-rx
-	system-s390x
 	system-sh4
 	system-sh4eb
 	system-sparc
-	system-sparc64
 	system-tricore
-	system-x86_64
 	system-xtensa
 	system-xtensaeb
-	x86_64
 	xtensa
 	xtensaeb
-	"
+"
+case "$CARCH" in
+	arm*|x86) ;;
+	*) _subsystems="$_subsystems
+		aarch64
+		aarch64_be
+		alpha
+		hppa
+		loongarch64
+		mips64
+		mips64el
+		mipsn32
+		mipsn32el
+		ppc64
+		ppc64le
+		riscv64
+		s390x
+		sparc32plus
+		sparc64
+		system-aarch64
+		system-alpha
+		system-hppa
+		system-loongarch64
+		system-microblaze
+		system-microblazeel
+		system-mips64
+		system-mips64el
+		system-ppc64
+		system-riscv64
+		system-s390x
+		system-sparc64
+		system-x86_64
+		x86_64
+		"
+		;;
+esac
+
 for _sub in $_subsystems; do
 	subpackages="$subpackages $pkgname-$_sub:_subsys"
 done
@@ -171,6 +178,7 @@ _modules="
 	hw-display-virtio-gpu-pci-gl
 	hw-display-virtio-vga
 	hw-display-virtio-vga-gl
+	hw-uefi-vars
 	hw-s390x-virtio-gpu-ccw
 	hw-usb-host
 	hw-usb-redirect
@@ -482,8 +490,7 @@ _subsys() {
 			;;
 		system-i386|system-x86_64)
 			provides="qemu-accel-tcg-$_arch"
-			amove usr/lib/qemu/accel-tcg-$_arch.so \
-				usr/share/qemu/edk2-$_arch-\*.fd
+			amove usr/share/qemu/edk2-$_arch-\*.fd
 			;;
 		system-s390x|system-hppa|system-ppc|system-sparc*)
 			depends="$pkgname-$_arch-firmware"
@@ -612,7 +619,7 @@ bridgehelper() {
 }
 
 sha512sums="
-941a4337a115c65de2fca042932efb31886114f4300226fcf55f04c2c5471bd2b5ce220c4b17e01c3679bd55ba08a1aa7ce399de15e3e5f28c17da52030b139e  qemu-9.2.3.tar.xz
+2215458ed8be3ab0b0032fe2a96e79183f5fc2da323d927018412ea3d980b022a07ba87d4f446229eaaa7d1b19a577d438dbcaa3af3bd537c7720b56734a2d8b  qemu-10.0.0.tar.xz
 b392f229e631d149d28eb952dcd507d9e5b6975cbba123fd3dab10860fa1936d5035d8e266926652acc1d7cde6874c440beccd33d729bf346769d2c138ebbc01  0006-linux-user-signal.c-define-__SIGRTMIN-MAX-for-non-GN.patch
 2c6b3b22877674f870958bb0c74ad85c814f01c98fb123142b1ce77d89adf5c08626e6eade7f627090a53b48f5cebe2a535547804345648cff91dd66f90c2d5b  xattr_size_max.patch
 7672a3518050f275219920f2cb088f6991ac810dba077856129d779fdf45a3e8c0302c8ca4aa58c0c38e44af80f56404006b3f250e4921fb364cd6fe7149e6ea  MAP_SYNC-fix.patch
