community/ceph18: backport patch for py3-importlib-metadata 5.0.0

--- a/community/ceph18/APKBUILD
+++ b/community/ceph18/APKBUILD
@@ -4,7 +4,7 @@
 # Maintainer: Duncan Bellamy <dunk@denkimushi.com>
 _pkgname=ceph
 pkgver=18.2.5
-pkgrel=0
+pkgrel=1
 _majorver=${pkgver%%.*}
 pkgname=$_pkgname$_majorver
 pkgdesc="Ceph is a distributed object store and file system, version $_majorver"
@@ -154,6 +154,7 @@ source="https://download.ceph.com/tarballs/ceph-$pkgver.tar.gz
 	boost-1.81.patch
 	gcc13.patch
 	gcc14-2.patch
+	py3-importlib-metadata-5.0.0.patch
 	"
 # to prevent things from installing wrong ceph libs, since they have the same SOMAJOR
 sonameprefix="ceph$_majorver:so:"
@@ -738,4 +739,5 @@ df20d148f0a2aec170d2ef5afa2fda30ecb2f91ea206d00556736936529fa8ef8b47c6e6b88f29a4
 ad71fda050df8658d653f9131855c28ff889395dfcc70a3124575c8b063c8e84eca7eb390232b6ee5a05238c4f953c5b55af7e961b1a99360696097a702686cd  boost-1.81.patch
 afef1cc7e43f500d95d2ffd1687cfcb756e9d8dec729186a25d513d4401b38f00edac922562a161575b1da1a65ded3e99d01cf34f9bc329f6d08cf2b896acd0c  gcc13.patch
 81c22e9229f70780b4c61b511f917f7384734f1221d0ad2412182e6430f2f6256d619ca315ae2efd5ff183746e2d5b960055c46367df081c747a462131f00b41  gcc14-2.patch
+bf088eeeac8554a66012f076745714326ab31632021ca2eeffa3b525bfa7fa5263096f2b0e0157e16c50c77ecf8b7771ee388e9472852e6860b160e1417e7ee1  py3-importlib-metadata-5.0.0.patch
 "
