--- a/main/libks/APKBUILD
+++ b/main/libks/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=libks
 pkgver=2.0.6
-pkgrel=0
+pkgrel=1
 pkgdesc="Foundational support for signalwire C products"
 url="https://github.com/signalwire/libks"
 arch="all"
@@ -11,6 +11,7 @@ makedepends="cmake samurai util-linux-dev openssl-dev>3"
 subpackages="$pkgname-dev $pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/signalwire/libks/archive/refs/tags/v$pkgver.tar.gz
 	disable-failing-tests.patch
+	fix-deadlock.patch
 	"
 
 build() {
@@ -31,4 +32,5 @@ package() {
 sha512sums="
 247fd2dc731f88954a120417fdac915014ba9924de222302801253a384114c2860e27d25928e7204bee679daa11c7b69980e4796890d3bf5ee8fb1a1534f1796  libks-2.0.6.tar.gz
 35c9f582304c49272aa1ccc6793b9eaa9bab84a6a56f181fb0a9db1a120d6c7d86d0910995a3004039f5875a2aec58c26b999cf7932485914bfebdedb1c35c37  disable-failing-tests.patch
+5a692f15e82c82c634948c9bde3cd182b4106f3b3931db2a36cab271a54f3cfccbf10b9154efcbb4bd51ffd2a1f0eac0736706d8690e632e0e026edae8d69828  fix-deadlock.patch
 "
